tests/baselines/reference/parserSkippedTokens1.errors.txt
==== tests/cases/compiler/parserSkippedTokens1.ts (2 errors) ====
    \
    ~
!!! parserSkippedTokens1.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens1.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.